2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Close the image after using it.
	Force the runtime to initialize with 2.0.

2009-04-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Fix stream header calculation.

	* cli-tables-tests.md: Tests for constant.

	* assembly-with-constants.cs: New test file for producing tests
	for constant table.

	* Makefile: Add new dependencies and do some cleanup.

2009-04-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for memberref.

2009-04-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-complex-type.cs: Add more types and methods to be used generating tests.

	* cli-tables-tests.md: Tests for interfaceimpl.

2009-04-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-params.cs: New test file with all sort of param kinds.

	* assembly-with-methods.cs: Added more stuff to test paramlist.

	* Makefile: Add new dependencies.

	* cli-tables-tests.md: Tests for methoddef's paramlist.
	Tests for the param table.

2009-04-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-methods.cs:
	* assembly-with-global-method.il: New test files with a global method.

	* assembly-with-complex-type.cs: Add more types and methods to be used generating tests.

	* cli-tables-tests.md: Tests for the methoddef table.
	
	* Makefile: Add new dependencies.

2009-04-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add read.ushort.

2009-04-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: More tests for the field table.

2009-04-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-complex-type.cs: Add stuff to
	fill constant, field rva and field marshal tables. 

	* cli-tables-tests.md: Initial tests for the field table.

	* gen-md-tests.c: Add or-byte and or-ushort effects. Fix
	documentation.

2009-04-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for the method list of the typedef table.
